# free-solscan-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: upload_release.yaml
src/free_solscan_api/: __init__.py  api.py  solauth.py
tests/: test_api.py
